--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "async-storage": "^0.1.0",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.3.1",
     "netinfo": "^0.1.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-action-sheet": "^2.2.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
-    "@react-native-community/netinfo": "11.1.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "expo-media-library": "~15.9.2",
+    "expo-camera": "~14.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
