--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
     "expo-media-library": "~15.9.2",
-    "expo-camera": "~14.1.3"
+    "expo-camera": "~14.1.3",
+    "expo-av": "~13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
